# PyDaemonControl

./: .gitignore  AGENTS.md  README.md  pydaemoncontrol.py  pyproject.toml
tests/: test_pydaemoncontrol.py
